--- a/Gaming-Assistant/app/src/main/res/values/strings.xml
+++ b/Gaming-Assistant/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Gaming-Assistant</string>
+    <string name="login_button">Login</string>
+    <string name="auth_error">Authorization error occurred!</string>
     <integer name="com_vk_sdk_AppId">5732584</integer>
 </resources>
