Changed LoginActivity Added MainActivity

--- a/Gaming-Assistant/app/src/main/res/values/strings.xml
+++ b/Gaming-Assistant/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="login_button">Login</string>
     <string name="auth_error">Authorization error occurred!</string>
     <integer name="com_vk_sdk_AppId">5732584</integer>
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
