--- a/Gaming-Assistant/app/src/main/res/values/strings.xml
+++ b/Gaming-Assistant/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="profile">Profile</string>
+    <string name="friends">Friends</string>
+    <string name="categories">Categories</string>
+    <string name="search">Search</string>
+
 </resources>
