--- a/Gaming-Assistant/app/src/main/res/values/strings.xml
+++ b/Gaming-Assistant/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="categories">Categories</string>
     <string name="search">Search</string>
 
+    <string name="empty">Empty.</string>
 </resources>
