--- a/Gaming-Assistant/app/src/main/res/values/strings.xml
+++ b/Gaming-Assistant/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="search">Search</string>
 
     <string name="empty">Empty.</string>
+    <string name="description">Description</string>
+    <string name="developer">Developer</string>
+    <string name="add">Add</string>
 
 </resources>
