--- a/Gaming-Assistant/app/src/main/res/values/strings.xml
+++ b/Gaming-Assistant/app/src/main/res/values/strings.xml
@@ -19,5 +19,10 @@
     <string name="description">Description</string>
     <string name="developer">Developer</string>
     <string name="add">Add</string>
+    <string name="status">Status</string>
+    <string name="city">City</string>
+    <string name="country">Country</string>
+    <string name="birth_date">Birth date</string>
+    <string name="sign_out">Sign out</string>
 
 </resources>
